--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Sep 07 13:18:08 BRT 2021
-sdk.dir=C\:\\Users\\anpro\\AppData\\Local\\Android\\Sdk
+#Mon Aug 01 08:53:09 BRT 2022
+sdk.dir=/Users/andre.silva/Library/Android/sdk
